# Kana-Recall

./: CNAME  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  practice.html  stats.html  svelte.config.js
.github/workflows/: release.yml
_app/: version.json
_app/immutable/assets/: 0.CDen-sZ7.css  0.Dfwhkta6.css  2.D6VCByez.css  5.GlfhYrZn.css  6.qB2bokSM.css  _layout.hrpaqtRR.css  _layout.m045TzXW.css  _page.BoxU5YYb.css  _page.D5JgmW34.css  _page.DpLHnIx3.css
_app/immutable/chunks/: await_block.DxHCDpKC.js  entry.B6LBwfMC.js  entry.BXOdRd34.js  entry.Dg3TJLik.js  index.DhbsmVG4.js  math.Bbo-_4-R.js  math.Df0k8ivH.js  router.BAPWZOKB.js  scheduler.CyFU2WUr.js
_app/immutable/entry/: app.BQ4jTbhl.js  app.CSiOcJlE.js  app.DwD9qTiC.js  start.Cj-tfGeZ.js  start.DJc3TVqb.js  start.DcWXvj6g.js
_app/immutable/nodes/: 0.CRg4WLj7.js  0.Cb3ap7UX.js  (+18 more)
backend/desktop/: Cargo.toml  package.json  tauri.conf.json
backend/desktop/src/: main.rs
backend/mobile/: capacitor.config.ts  package.json
backend/web/: package.json
frontend/: package.json  svelte.config.js  tailwind.config.cjs
frontend/src/: app.d.ts  app.scss
scripts/: release.sh
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Chart.svelte
src/lib/: math.ts  router.ts  sessionStorage.ts  syllabary.ts  timer.ts
src/routes/: +layout.svelte  +page.svelte
src/styles/: font.scss  spinner.scss
test/: accuracy.html
test/accuracy/: kata.html
test/recall/: hira.html
test/test/: hira.html
(+39 files in other folders)
