[package]
name = "Kana-Recall"
version = "0.2.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "Kana-Recall"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = ["fs-all", "global-shortcut-all", "path-all", "window-close", "window-set-resizable", "window-set-size", "window-start-dragging"] }
webview2-com = "0.19"
windows = "0.39"

[features]
# this feature is used for production builds where `devPath` points to the filesystem
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
